# Rachana

./: .gitignore  CLAUDE.md  NOTICE  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: electron.instructions.md  frontend.instructions.md  release.instructions.md  tauri.instructions.md  testing.instructions.md
.github/workflows/: app-store-release.yml  release.yml
docs/guides/: publishing.md
electron/: channels.ts  filesystem.test.ts  filesystem.ts  ipc.ts  lifecycle.test.ts  lifecycle.ts  main.ts  menu.ts  preferences.test.ts  preferences.ts  preload.ts  security.test.ts  security.ts  smoke.e2e.ts  validation.ts
scripts/: package-mas.mjs  prepare-mas-build.mjs  release-macos.mjs  upload-mas.mjs
specs/: 0001-spec.md  0002-folder-creation.md  idea.md  test-app.md
src/: App.tsx  index.css  index.css.test.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.mas.plist.template  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  security.rs
src/components/: AppMenu.test.tsx  AppMenu.tsx  ErrorBoundary.tsx  ExcalidrawEditor.test.tsx  ExcalidrawEditor.tsx  LaserPointer.test.tsx  LaserPointer.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  NewDocumentMenu.tsx  Sidebar.test.tsx  Sidebar.tsx  TabBar.test.tsx  TabBar.tsx  (+4 more)
(+42 files in other folders)
