[package]
name = "rachana"
version = "0.1.2"
description = "A private, local-first workspace for ideas and visual canvases"
authors = ["Rachana Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/RamakrishnaChilaka/Rachana"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rachana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
notify = "8.2.0"
blake3 = "1.8.5"
same-file = "1.0.6"
tempfile = "3.23.0"
fs2 = "0.4.3"

[target."cfg(unix)".dependencies]
libc = "0.2.180"
xattr = "1.6.1"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
